fix: remove overflow:none from body reset

--- a/materials/internals/reset.mod.css
+++ b/materials/internals/reset.mod.css
@@ -14,7 +14,6 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  overflow: hidden;
 }
 
 html {
